# agentdb-mvp

./: .gitignore  ARCHITECTURE_DECISION_AGTAG_VS_LLM_PARSER.md  AUTO_TASK_GENERATION_SYSTEM.md  CLAUDE.md  INCIDENT_REPORT_AGTAG_SYNTAX_FAILURE.md  INCIDENT_REPORT_FILE_CORRUPTION_WORKER_POOL.md  POOL_MONITOR_QUICK_START.md  README.md  SYSTEM_STATUS_2025-10-30.md  WORKER_TASK_QUEUE.json  pyproject.toml  schema.sql
examples/: INTEGRATION_REPORT.md  example.diff  example.py  sample_calculator.py  test_api_endpoints.py  test_context_orchestrator.py  test_sentinel_mcp.py  test_token_savings.py
scripts/: agentdb-cli.py  agentdb_full_index.py  auto_tag_python_files.py  auto_task_generator.py  continuous_test_loop.py  contract_injector.py  delegate_phase2_plus_gaps.py  extract_perfect_context.py  pool_monitor.py  run_migrations.py  test_auto_collection.py  test_integration.py  validate_agentdb_functionality.sh
src/agentdb/: __main__.py  agent_manager.py  agtag.py  auto_tagger.py  core.py  environment_tracker.py  focus.py  llm_analyzer.py  patch.py  provenance_tracker.py  schema_version.py  ticket_manager.py  (+3 more)
src/agentdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agtag_dos_protection.py  test_bootstrap.py  test_cli_errors.py  test_contract_anchor.py  test_directory_ingest.py  test_doc_zoom.py  test_extended_schema_integration.py  test_ingest_and_focus.py  test_migrate_command.py  test_migrations.py  test_perfect_prompt_builder.py  test_quality_validation.py  test_search.py
tools/: add_test_agtag.py  validate_agtag_syntax.py
(+11 files in other folders)
